<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/cta_horn_kits"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_margin"
    android:background="@drawable/panel_white"
    android:onClick="ctaListener"
    android:orientation="horizontal">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:background="@drawable/panel_image_blue_green"
        android:contentDescription="@string/cd_train_horn_kits"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cartoon_p5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cta_horn_kits_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_title"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cta_horn_kits_caption"
            android:textColor="@color/medium_grey"
            android:textSize="@dimen/text_small"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/cta_browse"
            android:textColor="@color/dark_grey"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>