<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/panel_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingTop="@dimen/element_padding"
        android:text="@string/cart_bill_and_ship_address"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/address_first"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                android:hint="@string/cart_first_name"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D0D0D0"/>

            <EditText
                android:id="@+id/address_last"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                android:hint="@string/cart_last_name"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D0D0D0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/address_street1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:hint="@string/cart_street_address"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D0D0D0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/address_street2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/cart_street_extra"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D0D0D0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/address_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                android:hint="@string/cart_city"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D0D0D0"/>

            <EditText
                android:id="@+id/address_postal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.2"
                android:hint="@string/cart_postal"
                android:inputType="number"
                android:maxLength="5"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D0D0D0"/>

            <EditText
                android:id="@+id/address_territory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.2"
                android:hint="@string/cart_territory"
                android:inputType="text"
                android:maxLength="2"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>