<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/panel_white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/element_padding"
        android:paddingRight="@dimen/element_padding"
        android:paddingTop="8dp"
        android:text="@string/cart_payment"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/payment_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:hint="@string/cart_cc_number"
                android:inputType="number"
                android:maxLength="16"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#D0D0D0"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <!--<EditText-->
            <!--android:textColor="#000000"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_weight="0.5"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:textColorHint="#A0A0A0"-->
            <!--android:inputType="number"-->
            <!--android:hint="Expiration: 00/00"-->
            <!--android:padding="2dp"-->
            <!--android:layout_margin="4dp"/>-->
            <EditText
                android:id="@+id/payment_expiry_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.1"
                android:hint="@string/cart_cc_month"
                android:inputType="number"
                android:maxLength="2"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>

            <EditText
                android:id="@+id/payment_expiry_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.1"
                android:hint="@string/cart_cc_year"
                android:inputType="number"
                android:maxLength="2"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#D0D0D0"/>

            <EditText
                android:id="@+id/payment_cvv2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="0.5"
                android:hint="@string/cart_cvv2"
                android:inputType="number"
                android:maxLength="4"
                android:padding="2dp"
                android:textColor="#000000"
                android:textColorHint="#A0A0A0"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>