<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:background="@color/light_grey">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/panel_white"
                android:orientation="vertical"
                android:layout_marginBottom="@dimen/element_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:paddingLeft="@dimen/element_padding"
                    android:paddingRight="@dimen/element_padding"
                    android:paddingTop="@dimen/element_padding"
                    android:text="@string/cart_shipping_options"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        <RadioGroup
            android:id="@+id/cart_shipping_methods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/panel_white"
            android:orientation="vertical"/>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.ProgressBar"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:background="#7F7F7F"
        android:text="@string/cart_button_back"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:background="#0070FF"
        android:text="@string/cart_button_payment"
        android:textStyle="bold"/>
</FrameLayout>